--- a/02_out_covar.Rmd
+++ b/02_out_covar.Rmd
@@ -9,18 +9,22 @@ output: pdf_document
 library(pacman)
 pacman::p_load(tidyverse, janitor)
 
-dat <- "~/Documents/ope_ssis/data/"
+dat_loc <- "~/Documents/ope_ssis/data/"
 res<- "~/Documents/ope_ssis/result/"
 ```
 
 #outcome and covariates
 ```{r}
+outcome<- read_csv(paste0(dat_loc, "raw/new_set/SSiS_20230804.csv")) |>
+  clean_names() |>
+  drop_na()
+
+
 #6 observations with missing outcome are removed
-out_cov<- read_csv(paste0(dat, "HOME_Data_20220810_tailored_OPE.csv")) |>
+covariates <- read_csv(paste0(dat_loc, "raw/HOME_Data_20220810_tailored_OPE.csv")) |>
   clean_names()|>
   filter(is.na(twin_set)) |> #remove twins
-  filter(if_any(56:59, ~ !is.na(.))) |>
-  select(c(1,4,6,9,14,19,23,29,31,32,33,56:59)) |>
+  select(c(1,4,6,9,14,19,23,29,31,32,33, 50:55)) |>
   mutate(child_race = ifelse(child_race == "White, non-Hispanic", 
                                       "white", "non_white"),
          mom_edu_p4_cat = ifelse(mom_edu_p4_cat %in% c("Some college or 2-year degree", 
@@ -34,17 +38,19 @@ out_cov<- read_csv(paste0(dat, "HOME_Data_20220810_tailored_OPE.csv")) |>
   mutate(rfr_gs_t = if_else(is.na(rfr_gs_t), median(rfr_gs_t, na.rm = TRUE), rfr_gs_t))|>
   mutate_if(is.character, as.factor)
 
-#summary of exposure and 
-summary_stats<- out_cov |>
-  select(-c(1, 2)) |>
-  select(where(is.numeric)) |>
-  pivot_longer(everything(), names_to = "metric", values_to = "value") |>
-  group_by(metric) |>
-   summarize(na_count = sum(is.na(value)),
-             median_conc = round(median(value, na.rm = TRUE), 2),
-             percentile_25 = round(quantile(value, 0.25, na.rm = TRUE), 2),
-             percentile_75 = round(quantile(value, 0.75, na.rm = TRUE), 2))
 ```
+
+#join exposure and covariates (n=236) 236*38
+```{r}
+out_cov<- outcome |>
+  left_join(covariates, by="participant_id") |>
+  select(-c(39:44)) |> # PBDEs (sigma-PBDEs has 59 observations with NA)
+  drop_na() # 14 observations with missing all covariate data
+
+write_csv(out_cov, paste0(dat_loc, "out_cov.csv"))
+```
+
+
 
 
 
