--- a/03_analytic_data.Rmd
+++ b/03_analytic_data.Rmd
@@ -9,34 +9,35 @@ output: pdf_document
 library(pacman)
 pacman::p_load(tidyverse, janitor)
 
-dat <- "~/Documents/ope_ssis/data/"
+dat_loc <- "~/Documents/ope_ssis/data/"
 res<- "~/Documents/ope_ssis/result/"
 ```
 
 #join exposure, outcome and covars
 ```{r}
-df<- full_join(exp_dat, out_cov, by="participant_id") |>
-  filter(if_any(14:27, ~ !is.na(.)))
+exp_dat<- read_csv(paste0(dat_loc, "exp_dat.csv"))
+out_cov<- read_csv(paste0(dat_loc, "out_cov.csv"))
 
-write_csv(df, paste0(dat, "analytic_set.csv"))
+df<- full_join(exp_dat, out_cov, by="participant_id") |>
+  filter(if_any(14:50, ~ !is.na(.))) # drop observations if any outcome or covariates are missing
+
+write_csv(df, paste0(dat_loc, "analytic_set.csv"))
 ```
+
 
 #summary of analytic dataset
 ```{r}
-summary_stats<- dat |>
+summary_stats<- df |>
   select(-c(1)) |>
   select(where(is.numeric)) |>
   pivot_longer(everything(), names_to = "metric", values_to = "value") |>
   group_by(metric) |>
-   summarize(pct_na = round(sum(is.na(value)/n()*100),2),
-             median_conc = round(median(value, na.rm = TRUE), 2),
-             percentile_25 = round(quantile(value, 0.25, na.rm = TRUE), 2),
-             percentile_75 = round(quantile(value, 0.75, na.rm = TRUE), 2))
+  summarize(n_na = sum(is.na(value)),
+            pct_na = round(sum(is.na(value)/length(value)*100), 2), # fraction of observations to be imputed
+            median_iqr = paste(round(quantile(value, 0.5, na.rm = T),2), "(", 
+                               round(quantile(value, 0.25, na.rm = T),2), "-", round(quantile(value, 0.75, na.rm = T),2), ")"))
 
 write_csv(summary_stats, paste0(res, "summary_analytic_dat.csv"))
 ```
-
-
-
 
 
