--- a/02_out_covar.Rmd
+++ b/02_out_covar.Rmd
@@ -24,7 +24,7 @@ outcome<- read_csv(paste0(dat_loc, "raw/new_set/SSiS_20230804.csv")) |>
 covariates <- read_csv(paste0(dat_loc, "raw/HOME_Data_20220810_tailored_OPE.csv")) |>
   clean_names()|>
   filter(is.na(twin_set)) |> #remove twins
-  select(c(1,4,6,9,14,19,23,29,31,32,33, 50:55)) |>
+  select(c(1,4,6,9,14,19,23,28,29,31,32,33, 50:55)) |>
   mutate(child_race = ifelse(child_race == "White, non-Hispanic", 
                                       "white", "non_white"),
          mom_edu_p4_cat = ifelse(mom_edu_p4_cat %in% c("Some college or 2-year degree", 
@@ -35,7 +35,8 @@ covariates <- read_csv(paste0(dat_loc, "raw/HOME_Data_20220810_tailored_OPE.csv"
                                           "married", "un_married"),
          depression_p4_cat = ifelse(depression_p4_cat %in% c("Minimal"), 
                                           "min", "mild_to_severe")) |>
-  mutate(rfr_gs_t = if_else(is.na(rfr_gs_t), median(rfr_gs_t, na.rm = TRUE), rfr_gs_t))|>
+  mutate(rfr_gs_t = if_else(is.na(rfr_gs_t), median(rfr_gs_t, na.rm = TRUE), rfr_gs_t),
+         bdi_p4 = ifelse(bdi_p4 <= 13, "min_depression", "higher_depression"))|>
   mutate_if(is.character, as.factor)
 
 ```
@@ -44,7 +45,7 @@ covariates <- read_csv(paste0(dat_loc, "raw/HOME_Data_20220810_tailored_OPE.csv"
 ```{r}
 out_cov<- outcome |>
   left_join(covariates, by="participant_id") |>
-  select(-c(39:44)) |> # PBDEs (sigma-PBDEs has 59 observations with NA)
+  select(-c(40:45)) |> # PBDEs (sigma-PBDEs has 59 observations with NA)
   drop_na() # 14 observations with missing all covariate data
 
 write_csv(out_cov, paste0(dat_loc, "out_cov.csv"))
