--- a/05_mi_multi_inf.Rmd
+++ b/05_mi_multi_inf.Rmd
@@ -13,6 +13,8 @@ dat_loc <- "~/Documents/ope_ssis/data/"
 res<- "~/Documents/ope_ssis/result/"
 ```
 
+#SKIP UNTIL LINE 63 - which loads the imputed datasets from an R object
+
 ```{r}
 dat<- read_csv(paste0(dat_loc, "analytic_set.csv"))
 ```
@@ -27,10 +29,10 @@ dat_long <- dat |>
 
 #split into 4 sets by each chemical for imputation
 #Split the dataframe into 4 sets
-dataframes <- lapply(17:20, function(position) {
+dataframes <- lapply(41:44, function(position) { #position of exposure variables
   variable_name <- colnames(dat_long)[position]  # Get the variable name at the specific position
-  new_df <- dat_long %>%
-    select(1:16, position)  # Select the first 16 variables and the specific variable
+  new_df <- dat_long |>
+    select(1:40, position)  # position of outcome and covariates
   return(new_df)
 })
 
@@ -53,19 +55,57 @@ for (obj in ls()) {
     rm(list = obj, envir = .GlobalEnv)
   }
 }
+
+save(imp_dat_bcep, imp_dat_bdcipp, imp_dat_dnbp, imp_dat_dphp, 
+     file = paste0("~/Documents/ope_ssis/data/opfr_imputed_objects.rda"))
+```
+
+#load imputed datasets
+```{r}
+load(paste0(dat_loc, "opfr_imputed_objects.rda"))
 ```
 
 #save exposure-response association in rda files
 ```{r}
 runGeeglm(datasets = c("imp_dat_bcep", "imp_dat_bdcipp", "imp_dat_dnbp", "imp_dat_dphp"), 
-          outcome = c("ss_std_score_c", "pb_std_score_c", "ss_std_score_p", "pb_std_score_p"),
-          outputFolder = "~/Documents/ope_ssis/test/")
+          covariates = c("gender", "child_race", "mat_age", "mari_st_p4", "mom_edu_p4_cat",
+                         "mid_income_p4", "cotinine" , "bdi_p4", "lead", "rfr_gs_t"),
+          outcome = c("ss_std_score_c", "com_raw_c", "coop_raw_c", "assert_raw_c","res_raw_c",
+                      "emp_raw_c", "eng_raw_c", "self_raw_c", "pb_std_score_c", "ext_raw_c",
+                      "bul_raw_c", "hyp_raw_c", "int_raw_c", "ss_std_score_p", "com_raw_p",
+                      "coop_raw_p", "assert_raw_p", "res_raw_p", "emp_raw_p", "eng_raw_p",
+                      "self_raw_p", "pb_std_score_p", "ext_raw_p", "bul_raw_p", "hyp_raw_p",
+                      "int_raw_p", "as_raw_p"),
+          p_id="participant_id",
+          outputFolder = "~/Documents/ope_ssis/test")
+
+#~/Documents/ope_ssis/result/gee_mi_res
+#~/Documents/ope_ssis/test
+```
+
+#for testing
+```{r}
+runGeeglmParallel(datasets = c("imp_dat_bcep", "imp_dat_bdcipp", "imp_dat_dnbp", "imp_dat_dphp"), 
+          covariates = c("gender", "child_race", "mat_age", "mari_st_p4", "mom_edu_p4_cat",
+                         "mid_income_p4", "cotinine" , "bdi_p4", "lead", "rfr_gs_t"),
+          outcome = c("ss_std_score_c", "com_raw_c", "coop_raw_c", "assert_raw_c","res_raw_c",
+                      "emp_raw_c", "eng_raw_c", "self_raw_c", "pb_std_score_c", "ext_raw_c",
+                      "bul_raw_c", "hyp_raw_c", "int_raw_c", "ss_std_score_p", "com_raw_p",
+                      "coop_raw_p", "assert_raw_p", "res_raw_p", "emp_raw_p", "eng_raw_p",
+                      "self_raw_p", "pb_std_score_p", "ext_raw_p", "bul_raw_p", "hyp_raw_p",
+                      "int_raw_p", "as_raw_p"),
+          outputFolder = "~/Documents/ope_ssis/test")
+```
+
+```{r}
+load("~/Documents/ope_ssis/test/imp_dat_bcep_as_raw_p_bcep.rda")
+x<-as_tibble(tidy(pool(fit), conf.int = TRUE))
 ```
 
 
 #get estimates as csv
 ```{r}
-extractGEE(input_folder="~/Documents/ope_ssis/result/gee_mi_res", 
+extractGEEParallel(input_folder="~/Documents/ope_ssis/test", 
                    output_folder= "~/Documents/ope_ssis/test")
 ```
 
