--- a/01_exp_dat.Rmd
+++ b/01_exp_dat.Rmd
@@ -13,11 +13,34 @@ dat_loc <- "~/Documents/ope_ssis/data/"
 res<- "~/Documents/ope_ssis/result/"
 ```
 
-#ope data - 3 visits 16w, 26w, birth
+#ope data - pre and post natal exposure data received from aimin on Dec 13, 2023
 ```{r}
-ope_exp<- read_sas(paste0(dat_loc, "raw/ur_fr_prenatal.sas7bdat")) |>
-  clean_names() |>
-  filter(flg_nr == 0)
+ope_exp_n1<- read_sas(paste0(dat_loc, "raw/dec_23_new_ver/ur_fr_sg_20210921.sas7bdat")) |>
+  clean_names() 
+  #|>filter(flg_nr == 0)
+
+#ope data - p4 visit
+
+ope_exp_n2<- read_sas(paste0(dat_loc, "raw/dec_23_new_ver/ur_fr_12y.sas7bdat")) |>
+  clean_names() 
+  # |> filter(flg_nr == 0)
+```
+
+#append longitudinal exposure data
+```{r}
+ope_exp <- bind_rows(ope_exp_n1, ope_exp_n2) |>
+  mutate(visit = case_when(
+    visit == "16W" ~ "prenatal_16W",
+    visit == "26W" ~ "prenatal_26W",
+    visit == "Birth" ~ "delivery",
+    visit == "12M" ~ "postnatal_1_yr",
+    visit == "24M" ~ "postnatal_2_yr",
+    visit == "36M" ~ "postnatal_3_yr",
+    visit == "60M" ~ "postnatal_4_yr",
+    visit == "P3" ~ "postnatal_5_yr",
+    visit == "P4" ~ "postnatal_8_yr",
+    TRUE ~ as.character(visit)
+  ))
 ```
 
 #lod summaries
@@ -33,8 +56,7 @@ write_csv(bel_lod_summaries, paste0(res, "bel_lod_summaries.csv"))
 
 #remove exposures if fraction <LOD is >=60% 
 ```{r}
-ope_exp_filtered<- ope_exp |>
-  filter(!analyte_code %in% c("DBzP", "DCP", "TBBA", "BCPP") ) |>
+ope_exp_filtered<- ope_exp  |>
   mutate(analyte_code = tolower(analyte_code)) |>
   mutate(analyte_code = fct_recode(as.factor(analyte_code), 
                              bcep = "bcetp", bdcipp = "bdcpp", 
@@ -49,8 +71,12 @@ exp_summary <- ope_exp_filtered |>
   summarize(freq_bel_lod = sum(flg_lod == 1, na.rm = TRUE),
             total_obs = n(),
             pct_bel_lod = round((freq_bel_lod / total_obs) * 100, 2),
-            median_iqr = paste(round(quantile(result_sg_adj, 0.5),2), "(", 
-                               round(quantile(result_sg_adj, 0.25),2), "-", round(quantile(result_sg_adj, 0.75),2), ")"))
+            median_iqr = paste(
+              round(quantile(result_sg_adj, 0.5, na.rm = TRUE), 2), "(", 
+              round(quantile(result_sg_adj, 0.25, na.rm = TRUE), 2), "-", 
+              round(quantile(result_sg_adj, 0.75, na.rm = TRUE), 2), ")"
+              ),
+            analyte_lod = first(analyte_lod))
 
 
 write_csv(exp_summary, paste0(res, "exp_summary_pre_imp.csv"))
@@ -58,8 +84,12 @@ write_csv(exp_summary, paste0(res, "exp_summary_pre_imp.csv"))
 
 #data prep for analytic set
 ```{r}
-exp_dat<- ope_exp_filtered |>
-  select(c(1,2,4,5)) |>
+exp_dat <- ope_exp_filtered |>
+  filter(!analyte_code %in% c("dbzp", "dcp", "tbba", "bcpp", "ipppp", "tbppp")) |>
+  select(c(1, 2, 4, 5)) |>
+  group_by(participant_id, analyte_code, visit) |>
+  summarise(result = mean(result, na.rm = TRUE), .groups = "drop") |>
+  mutate(result = replace_na(result, NA)) |>
   pivot_wider(names_from = c(analyte_code, visit), values_from = result) |>
   as_tibble()
 ```
