--- a/03_analytic_data.Rmd
+++ b/03_analytic_data.Rmd
@@ -24,7 +24,6 @@ df<- full_join(exp_dat, out_cov, by="participant_id") |>
 write_csv(df, paste0(dat_loc, "analytic_set.csv"))
 ```
 
-
 #summary of analytic dataset
 ```{r}
 summary_stats<- df |>
@@ -32,12 +31,14 @@ summary_stats<- df |>
   select(where(is.numeric)) |>
   pivot_longer(everything(), names_to = "metric", values_to = "value") |>
   group_by(metric) |>
-  summarize(n_na = sum(is.na(value)),
+  summarize(Below_LOD = sum(is.na(value)),
             pct_na = round(sum(is.na(value)/length(value)*100), 2), # fraction of observations to be imputed
+            NR_interference = sum(value == 9999, na.rm = TRUE),
+            NR_interference_pct = round((NR_interference / length(value)) * 100, 2),
             median_iqr = paste(
-              round(quantile(value, 0.5, na.rm = TRUE), 2), "(", 
-              round(quantile(value, 0.25, na.rm = TRUE), 2), "-", 
-              round(quantile(value, 0.75, na.rm = TRUE), 2), ")"
+              round(quantile(value[value != 9999], 0.5, na.rm = TRUE), 2), "(",
+              round(quantile(value[value != 9999], 0.25, na.rm = TRUE), 2), "-", 
+              round(quantile(value[value != 9999], 0.75, na.rm = TRUE), 2), ")"
               ))
 
 write_csv(summary_stats, paste0(res, "summary_analytic_dat.csv"))
